# STC

./: .gitignore  Cargo.toml  LICENSE  README.md  conftest.py  pyproject.toml  pytest.ini
python/stc/: __init__.py  exceptions.py  loading.py
src/: lib.rs
src/stc/: loading.py
tests/: test_loads_basic.py  test_loads_dicts.py  test_loads_errors.py  test_loads_lists.py  test_loads_nested.py  test_loads_strings.py
