[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "stc"
version = "0.1.0"
description = "Simple Tool Calling Contract"
requires-python = ">=3.9"
authors = [{ name = "Perfec-Yu" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Operating System :: OS Independent",
]
license = { text = "MIT" }

[tool.maturin]
# If you want the wheel to be importable as `import stc_rust`, leave it.
# If you wanted a different *Python* import name, you could set:
# module-name = "some_other_name"
python-source = "python"
module-name = "stc.stc_rust"